# acsMakefile2cmake

./: FindACE.cmake  FindACS.cmake
include/: FindACE.cmake  FindACS.cmake  UseTAO.cmake  searchForIDLDeps
test/: CMakeLists.txt  main.cpp
test/idl/: time.idl
