cmake_minimum_required(VERSION 2.8)
SET(CMAKE_MODULE_PATH "../include")

INCLUDE(UseTAO)

project(TEST)

FIND_PACKAGE(ACE)
INCLUDE_DIRECTORIES(${ACE_INCLUDE_DIR} ${ACE_INCLUDE_DIR}/TAO)
LINK_DIRECTORIES(${ACE_INCLUDE_DIR}/lib .)
SET (CMAKE_SKIP_RPATH TRUE)
SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")

TAO_ADD_IDL(time.idl)

ADD_EXECUTABLE(test main.cpp)
TARGET_LINK_LIBRARIES(test timeStubs)
